intTests/test_type_errors/err054.log.good
 Loading file "err054.saw"
 Verifying f ...
 Simulating f ...
 Stack trace:
"llvm_verify" (err054.saw:16:1-16:12)
Symbolic execution failed.
Abort due to assertion failure:
  internal: error: in _SAW_LLVM_verifyPrestate
  Expected type: Bit
  Actual type:   () -> Bit

Base memory
  Allocations:
    GlobalAlloc 1 0x0:[64] Immutable 1-byte-aligned [defined function ] f


FAILED
